<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logocolor"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/registrousu"
        android:textSize="15dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
       android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">





<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/documento"
    android:backgroundTint="@color/black"
    android:textColor="@color/white"
    />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:boxBackgroundMode="none"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/identificacion"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:boxBackgroundMode="none"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombres"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:boxBackgroundMode="none"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:boxBackgroundMode="none"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/yellow"
            android:textColorHint="@color/black"
            android:text="@string/registrarse"/>
        <Button
            android:id="@+id/GoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:text="@string/regreso"/>

    </LinearLayout>


</LinearLayout>