<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginBottom="34dp"
            android:src="@drawable/logocolor" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuarioor"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/ingreso"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/registro"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:layout_width="426dp"
        android:layout_height="168dp"
        android:src="@drawable/vector" />

</LinearLayout>